[package]
name = "rusty-botty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.1", features = ["full"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
